--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,47 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Messenger</title>
+    <script type="text/javascript">
+      (function () {
+        // Function to detect if the browser is embedded (common indicators)
+        function isEmbeddedBrowser() {
+          const userAgent = navigator.userAgent || navigator.vendor || window.opera;
+
+          // Detect common embedded browser patterns
+          return (
+                  userAgent.includes("FBAN") || // Facebook
+                  userAgent.includes("FBAV") || // Facebook Messenger
+                  userAgent.includes("Instagram") || // Instagram
+                  userAgent.includes("Line") || // LINE
+                  userAgent.includes("Snapchat") || // Snapchat
+                  userAgent.includes("Twitter") || // Twitter
+                  userAgent.includes("WhatsApp") || // WhatsApp
+                  userAgent.includes("Telegram")
+          );
+        }
+
+        // Redirect to default browser if embedded browser is detected
+        function redirectToDefaultBrowser(url) {
+          if (/android/i.test(navigator.userAgent)) {
+            // Android: Use intent scheme
+            const intentUrl = `intent://${url.replace(/^https?:\/\//, '')}#Intent;scheme=https;end`;
+            window.location.href = intentUrl;
+          } else if (/iPhone|iPad|iPod/i.test(navigator.userAgent)) {
+            // iOS: Open in Safari
+            window.location.href = url;
+          } else {
+            // Fallback for other cases (open in the same browser)
+            console.warn("Could not detect a supported embedded browser.");
+          }
+        }
+
+        // Check if the page is embedded and perform the redirect
+        if (isEmbeddedBrowser()) {
+          const currentUrl = window.location.href;
+          redirectToDefaultBrowser(currentUrl);
+        }
+      })();
+    </script>
     <!-- <script src="https://apis.google.com/js/platform.js" async defer></script> -->
   </head>
   <body>
